[tool.poetry]
name = "copilotkit"
version = "0.1.27"
description = "CopilotKit python SDK"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://copilotkit.ai"
repository = "https://github.com/CopilotKit/sdk-python"
keywords = ["copilot", "copilotkit", "langgraph", "langchain", "ai", "langsmith", "langserve"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langgraph = "^0.2.62"
httpx = "^0.28.1"
fastapi = "^0.115.6"
langchain = "^0.3.14"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.1"
partialjson = "^0.0.8"
langgraph-sdk = "^0.1.51"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = "copilotkit.demos.research_canvas.demo:main"
